Add more experience for wordpress, reorder jobs

--- a/me.html
+++ b/me.html
@@ -109,85 +109,52 @@
                 <div class="col-md-9 col-sm-6"></div>
                 <div class="col-sm-3">
                     <div class="row text-end row-cols-1">
-                        <div class="col fs-4"> <u>First Investment Bank (FiBank)</u> </div>
-                        <div class="col fs-6"> <i>Nov 2012 - Sep 2015</i> </div>
-                    </div>
-                </div>
-                <div class="col-sm-6" id="acc">
-                    <div class="accordion">
-                        <div class="accordion-item">
-                            <h3 class="text-primary accordion-header" id="heading1">
-                                <button class="accordion-button text-primary collapsed fs-4" type="button"
-                                    data-bs-toggle="collapse" data-bs-target="#collapse1" aria-controls="collapse1">
-                                    Physical security at office (not related to software engineering):
-                                </button>
-                            </h3>
-                            <div id="collapse1" class="accordion-collapse collapse animatable opacity-0" aria-labelledby="heading1"
-                                data-bs-parent="#acc">
-                                <div class="accordion-body">
-                                    <ul class="list-group list-group-flush">
-                                        <li class="list-group-item">
-                                            <i>Ensure calm and secure environment related to clients and office
-                                                maintenance</i>
-                                        </li>
-                                        <li class="list-group-item">
-                                            <i>Communication between the office team, coordinate and observe client
-                                                behavior</i>
-                                        </li>
-                                        <li class="list-group-item">
-                                            <i>Follow strict rules regarding security operations</i>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
+                        <div class="col fs-4"> <u><a href="https://spici.spk.bg" target="_blank">spici.spk.bg</a>
+                            </u>
                         </div>
+                        <div class="col fs-6"> <i>Oct 2023 - present</i> </div>
                     </div>
                 </div>
-                <div class="col-sm-3"></div>
-                <div class="col-sm-3">
-                    <div class="row text-end row-cols-1">
-                        <div class="col fs-4"> <u>A-Triks</u> </div>
-                        <div class="col fs-6"> <i>Nov 2016 - Nov 2017</i> </div>
-                    </div>
-                </div>
-                <div class="col-sm-6" id="acc2">
+                <div class="col-sm-6" id="acc4">
                     <div class="accordion">
                         <div class="accordion-item">
-                            <h3 id="heading2" class="accordion-header">
-                                <button class="accordion-button text-primary collapsed fs-4" type="button"
-                                    data-bs-toggle="collapse" data-bs-target="#collapse2" aria-controls="collapse2">
-                                    Back-end Sitefinity Developer:
+                            <h3 class="accordion-header" id="heading4">
+                                <button class="accordion-button text-primary collapsed fs-3" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapse4" aria-controls="collapse4">
+                                    Maintain Wordpress site (volunteer):
                                 </button>
                             </h3>
-                            <div id="collapse2" class="accordion-collapse collapse animatable opacity-0" aria-labelledby="heading2"
-                                data-bs-parent="#acc2">
+                            <div class="accordion-collapse collapse animatable opacity-0" aria-labelledby="heading4" data-bs-parent="#acc4"
+                                id="collapse4">
                                 <div class="accordion-body">
                                     <ul class="list-group list-group-flush">
+                                        <li class="list-group-item"><i>Develop widget for display tickets info (Tickera
+                                                &
+                                                WooCommerce)
+                                                <a href="https://spici.spk.bg/участници" target="_blank">participants
+                                                    page</a>.
+                                                Separate PHP code, HTML mark-up (<a
+                                                    href="https://github.com/bobthecow/mustache.php"
+                                                    target="_blank">Mustache PHP</a>), CSS & JS <a
+                                                    href="https://datatables.net/" tartget="_blank">datatables net</a>
+                                                in single files.
+                                            </i></li>
+                                        <li class="list-group-item"><i>A group of volunteers use their experience and
+                                                time to
+                                                organize a
+                                                3-day
+                                                event with festival and cross-country mountain bike race. The website is
+                                                responsible
+                                                for
+                                                ticket sales
+                                                and information about the event.</i></li>
                                         <li class="list-group-item">
-                                            <i>Develop custom widgets (including designer element)</i>
+                                            <i>Deploying a staging environment of Wordpress in Azure.</i>
                                         </li>
-                                        <li class="list-group-item"><i>Migrating/Maintain Sitefinity projects</i></li>
-                                        <li class="list-group-item"><i>Fixing Sitefinity database and configuration</i>
+                                        <li class="list-group-item">
+                                            <i>Configure <a href="https://learn.microsoft.com/en-us/azure/communication-services/quickstarts/email/create-email-communication-resource" target="_blank">Azure Email communication</a> 
+                                                service for Wordpress plugin (<a href="https://wordpress.org/plugins/wp-smtp/" target="_blank">WP SMTP</a>   )</i>
                                         </li>
-                                        <li class="list-group-item"><i>Decompile Sitefinity SDK libraries, reading
-                                                code</i>
-                                        </li>
-                                        <li class="list-group-item"><i>Participate in client meetings, consult for
-                                                better
-                                                solutions,
-                                                estimate client requirements</i></li>
-                                        <li class="list-group-item"><i>Develop web solutions based on .NET to meet
-                                                client
-                                                requirements</i>
-                                        </li>
-                                        <li class="list-group-item"><i>Kendo UI JS, Grid, Custom validations and
-                                                messages</i> </li>
-                                        <li class="list-group-item"><i>Jira, Confluence, Agile, Unit testing, GitHub,
-                                                TFS</i></li>
-                                        <li class="list-group-item"><i>Complex excel export</i></li>
-                                        <li class="list-group-item"><i>Entity Framework, database first approach</i>
-                                        </li>
-                                        <li class="list-group-item"><i>Manual Upload - On-premise IIS</i></li>
                                     </ul>
                                 </div>
                             </div>
@@ -278,47 +245,84 @@
                 <div class="col-sm-3"></div>
                 <div class="col-sm-3">
                     <div class="row text-end row-cols-1">
-                        <div class="col fs-4"> <u><a href="https://spici.spk.bg" target="_blank">spici.spk.bg</a>
-                            </u>
-                        </div>
-                        <div class="col fs-6"> <i>Oct 2023 - present</i> </div>
+                        <div class="col fs-4"> <u>A-Triks</u> </div>
+                        <div class="col fs-6"> <i>Nov 2016 - Nov 2017</i> </div>
                     </div>
                 </div>
-                <div class="col-sm-6" id="acc4">
+                <div class="col-sm-6" id="acc2">
                     <div class="accordion">
                         <div class="accordion-item">
-                            <h3 class="accordion-header" id="heading4">
-                                <button class="accordion-button text-primary collapsed fs-3" type="button"
-                                    data-bs-toggle="collapse" data-bs-target="#collapse4" aria-controls="collapse4">
-                                    Maintain Wordpress site (volunteer):
+                            <h3 id="heading2" class="accordion-header">
+                                <button class="accordion-button text-primary collapsed fs-4" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapse2" aria-controls="collapse2">
+                                    Back-end Sitefinity Developer:
                                 </button>
                             </h3>
-                            <div class="accordion-collapse collapse animatable opacity-0" aria-labelledby="heading4" data-bs-parent="#acc4"
-                                id="collapse4">
+                            <div id="collapse2" class="accordion-collapse collapse animatable opacity-0" aria-labelledby="heading2"
+                                data-bs-parent="#acc2">
                                 <div class="accordion-body">
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item"><i>Develop widget for display tickets info (Tickera
-                                                &
-                                                WooCommerce)
-                                                <a href="https://spici.spk.bg/участници" target="_blank">participants
-                                                    page</a>.
-                                                Separate PHP code, HTML mark-up (<a
-                                                    href="https://github.com/bobthecow/mustache.php"
-                                                    target="_blank">Mustache PHP</a>), CSS & JS <a
-                                                    href="https://datatables.net/" tartget="_blank">datatables net</a>
-                                                in single files.
-                                            </i></li>
-                                        <li class="list-group-item"><i>A group of volunteers use their experience and
-                                                time to
-                                                organize a
-                                                3-day
-                                                event with festival and cross-country mountain bike race. The website is
-                                                responsible
-                                                for
-                                                ticket sales
-                                                and information about the event.</i></li>
                                         <li class="list-group-item">
-                                            <i>Deploying a staging environment of Wordpress in Azure.</i>
+                                            <i>Develop custom widgets (including designer element)</i>
+                                        </li>
+                                        <li class="list-group-item"><i>Migrating/Maintain Sitefinity projects</i></li>
+                                        <li class="list-group-item"><i>Fixing Sitefinity database and configuration</i>
+                                        </li>
+                                        <li class="list-group-item"><i>Decompile Sitefinity SDK libraries, reading
+                                                code</i>
+                                        </li>
+                                        <li class="list-group-item"><i>Participate in client meetings, consult for
+                                                better
+                                                solutions,
+                                                estimate client requirements</i></li>
+                                        <li class="list-group-item"><i>Develop web solutions based on .NET to meet
+                                                client
+                                                requirements</i>
+                                        </li>
+                                        <li class="list-group-item"><i>Kendo UI JS, Grid, Custom validations and
+                                                messages</i> </li>
+                                        <li class="list-group-item"><i>Jira, Confluence, Agile, Unit testing, GitHub,
+                                                TFS</i></li>
+                                        <li class="list-group-item"><i>Complex excel export</i></li>
+                                        <li class="list-group-item"><i>Entity Framework, database first approach</i>
+                                        </li>
+                                        <li class="list-group-item"><i>Manual Upload - On-premise IIS</i></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3"></div>
+                <div class="col-sm-3">
+                    <div class="row text-end row-cols-1">
+                        <div class="col fs-4"> <u>First Investment Bank (FiBank)</u> </div>
+                        <div class="col fs-6"> <i>Nov 2012 - Sep 2015</i> </div>
+                    </div>
+                </div>
+                <div class="col-sm-6" id="acc">
+                    <div class="accordion">
+                        <div class="accordion-item">
+                            <h3 class="text-primary accordion-header" id="heading1">
+                                <button class="accordion-button text-primary collapsed fs-4" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapse1" aria-controls="collapse1">
+                                    Physical security at office (not related to software engineering):
+                                </button>
+                            </h3>
+                            <div id="collapse1" class="accordion-collapse collapse animatable opacity-0" aria-labelledby="heading1"
+                                data-bs-parent="#acc">
+                                <div class="accordion-body">
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">
+                                            <i>Ensure calm and secure environment related to clients and office
+                                                maintenance</i>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <i>Communication between the office team, coordinate and observe client
+                                                behavior</i>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <i>Follow strict rules regarding security operations</i>
                                         </li>
                                     </ul>
                                 </div>
@@ -327,7 +331,6 @@
                     </div>
                 </div>
                 <div class="col-sm-3"></div>
-
                 <div class="col-md-3 col-sm-6 border-bottom border-primary border-5 text-end">
                     <h3 class="text-primary" id="skills">
                         Skills:
