--- a/me.html
+++ b/me.html
@@ -649,7 +649,7 @@ APEX SQL Search;</pre>
                 </div>
                 <div class="col-0 col-sm-3"></div>
                 <div class="col-sm-3 text-end">
-                    <h4>Future collaboration</h4>
+                    <h4>Collaboration</h4>
                 </div>
                 <div class="col-sm-6 animatable opacity-0">
                     <p>
@@ -659,7 +659,10 @@ APEX SQL Search;</pre>
                             Adding
                             different layer of map seems very easy. It's an open-source project which can add
                             BGMountains
-                            map as a layer in the options menu.
+                            map as a layer in the options menu. 
+                            <a href="https://github.com/gpxstudio/gpxstudio.github.io/pull/272" target="_blank">Pull Request
+                                <span><i class="bi bi-box-arrow-up-right"></i></span>
+                            </a>
                         </i>
                     </p>
                 </div>
