--- a/me.html
+++ b/me.html
@@ -82,7 +82,13 @@
                     <img src="./images/cv-photo-blur.png" width="200" class="img-fluid" alt="Mihail Yankov">
                 </div>
                 <div class="col-9 row align-items-end">
-                    <h2><u>Mihail Yankov</u></h2>
+                    <h2>
+                        <u>
+                            <a href="https://www.linkedin.com/in/mihail-yankov-0a9768a0/" target="_blank"> 
+                                Mihail Yankov <i class="bi bi-linkedin"></i>
+                            </a>
+                        </u>
+                    </h2>
                 </div>
                 <div class="row wrapper-block">
                     <div class="col-3 text-end">
