--- a/me.html
+++ b/me.html
@@ -386,6 +386,7 @@ REST APIs;
 ASP .NET Core;
 .NET Framework; 
 Azure cloud configurations;
+Azure Key-Vault;
 App Services;
 App Registrations; 
 Service bus (subscribers, topics);
@@ -403,7 +404,8 @@ React JS; Kendo UI; Wordpress;
 Restsharp; React (Redux);
 NodeJS; NPM;
 Windows Forms;
-Sitefinity;</pre>
+Sitefinity;
+Polly .NET;</pre>
                             </i>
                         </div>
                     </div>
@@ -441,7 +443,8 @@ ChostDoc;</pre>
                     <i>
                         <pre>
 Reflexil;
-APEX SQL Search;</pre>
+APEX SQL Search;
+FileZilla;</pre>
                     </i>
                 </div>
                 <div class="col-12 col-sm-2"></div>
@@ -549,6 +552,20 @@ APEX SQL Search;</pre>
                         <li class="list-group-item"><i>Going out of comfort zone sometimes: Deployed Wordpress in
                                 Azure.</i></li>
                     </ul>
+                </div>
+                <div class="col-0 col-sm-3"></div>
+                <div class="col-sm-3">
+                    <div class="row text-end row-cols-1">
+                        <div class="col fs-4"> <u>Books</u>  </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <i>
+<pre>
+<a href="https://www.oreilly.com/library/view/code-complete-2nd/0735619670/">Code complete 2-nd edition</a>;
+<a href="https://www.artofunittesting.com/">The Art of Unit Testing 2-nd edition</a>;
+</pre>
+                    </i>
                 </div>
                 <div class="col-0 col-sm-3"></div>
                 <div class="col-sm-3 border-bottom border-primary border-5 text-end" id="github">
