--- a/me.html
+++ b/me.html
@@ -115,6 +115,16 @@
                 <div class="col-md-9 col-sm-6"></div>
                 <div class="col-sm-3">
                     <div class="row text-end row-cols-1">
+                        <div class="col fs-4"> <u><a href="https://www.objectsystems.com/" target="_blank">OSI</a>
+                            </u>
+                        </div>
+                        <div class="col fs-6"> <i>Mar 2024   - present</i> </div>
+                    </div>
+                </div>
+                <div class="col-sm-6"></div>
+                <div class="col-sm-3"></div>
+                <div class="col-sm-3">
+                    <div class="row text-end row-cols-1">
                         <div class="col fs-4"> <u><a href="https://spici.spk.bg" target="_blank">spici.spk.bg</a>
                             </u>
                         </div>
