Updates of expririance page

--- a/me.html
+++ b/me.html
@@ -128,7 +128,7 @@
                         <div class="col fs-4"> <u><a href="https://spici.spk.bg" target="_blank">spici.spk.bg</a>
                             </u>
                         </div>
-                        <div class="col fs-6"> <i>Oct 2023 - present</i> </div>
+                        <div class="col fs-6"> <i>Oct 2023 - June 2024</i> </div>
                     </div>
                 </div>
                 <div class="col-sm-6" id="acc4">
@@ -145,31 +145,31 @@
                                 <div class="accordion-body">
                                     <ul class="list-group list-group-flush">
                                         <li class="list-group-item"><i>Develop widget for display tickets info (Tickera
-                                                &
-                                                WooCommerce)
-                                                <a href="https://spici.spk.bg/участници" target="_blank">participants
-                                                    page</a>.
+                                                & WooCommerce)
+                                                <a href="https://spici.spk.bg/участници" target="_blank">
+                                                    participants page
+                                                </a>.
                                                 Separate PHP code, HTML mark-up (<a
                                                     href="https://github.com/bobthecow/mustache.php"
                                                     target="_blank">Mustache PHP</a>), CSS & JS <a
                                                     href="https://datatables.net/" tartget="_blank">datatables net</a>
-                                                in single files.
+                                                in single files. Presented in this video here (race predictions):
+                                                <iframe width="560" height="315" src="https://www.youtube.com/embed/FAbOFOXGwyI?si=RaF1qFnMa9AoHOtJ&amp;start=361" 
+                                                    title="YouTube video player" frameborder="0" 
+                                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                                                </iframe>
                                             </i></li>
                                         <li class="list-group-item"><i>A group of volunteers use their experience and
-                                                time to
-                                                organize a
-                                                3-day
-                                                event with festival and cross-country mountain bike race. The website is
-                                                responsible
-                                                for
-                                                ticket sales
+                                                time to organize a 3-day event with festival and cross-country
+                                                mountain bike race. The website is responsible for ticket sales
                                                 and information about the event.</i></li>
                                         <li class="list-group-item">
                                             <i>Deploying a staging environment of Wordpress in Azure.</i>
                                         </li>
                                         <li class="list-group-item">
                                             <i>Configure <a href="https://learn.microsoft.com/en-us/azure/communication-services/quickstarts/email/create-email-communication-resource" target="_blank">Azure Email communication</a> 
-                                                service for Wordpress plugin (<a href="https://wordpress.org/plugins/wp-smtp/" target="_blank">WP SMTP</a>   )</i>
+                                                service for Wordpress plugin (<a href="https://wordpress.org/plugins/wp-smtp/" target="_blank">WP SMTP</a>)</i>
                                         </li>
                                     </ul>
                                 </div>
