Add logos of companies.

--- a/me.html
+++ b/me.html
@@ -38,6 +38,10 @@
         .animatable {
             transition: opacity 0.75s linear;
         }
+
+        .osi-logo {
+            background-color: black;
+        }
     </style>
 
     <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm" id="navigation-menu">
@@ -74,8 +78,7 @@
         </div>
     </nav>
 
-    <div data-bs-spy="scroll" data-bs-target="#navigation-menu" class="scrollspy" data-bs-smooth-scroll="true"
-        tabindex="0">
+    <div data-bs-spy="scroll" data-bs-target="#navigation-menu" class="scrollspy" data-bs-smooth-scroll="true" tabindex="0">
         <div class="container">
             <div class="row gy-3 ">
                 <div class="col-3 text-end">
@@ -115,18 +118,41 @@
                 <div class="col-md-9 col-sm-6"></div>
                 <div class="col-sm-3">
                     <div class="row text-end row-cols-1">
-                        <div class="col fs-4"> <u><a href="https://www.objectsystems.com/" target="_blank">OSI</a>
-                            </u>
+                        <div class="col fs-4"> 
+                            <img src="/images/logos/OSI.png" class="osi-logo" alt="Object systems international" width="36">
+                            <u><a href="https://www.objectsystems.com/" target="_blank">OSI</a></u>
                         </div>
                         <div class="col fs-6"> <i>Mar 2024   - present</i> </div>
                     </div>
                 </div>
-                <div class="col-sm-6"></div>
+                <div class="col-sm-6" id="acc5">
+                    <div class="accordion">
+                        <div class="accordion-item">
+                            <h3 class="text-primary accordion-header" id="heading5">
+                                <button class="accordion-button text-primary collapsed fs-4" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapse5" aria-controls="collapse5">
+                                    Senior Full-stack Engineer:
+                                </button>
+                            </h3>
+                            <div id="collapse5" class="accordion-collapse collapse animatable opacity-0" aria-labelledby="heading5"
+                                data-bs-parent="#acc5">
+                                <div class="accordion-body">
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">
+                                            <i>TO DO:</i>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-sm-3"></div>
                 <div class="col-sm-3">
                     <div class="row text-end row-cols-1">
-                        <div class="col fs-4"> <u><a href="https://spici.spk.bg" target="_blank">spici.spk.bg</a>
-                            </u>
+                        <div class="col fs-4">
+                            <img src="/images/logos/spiciLogo.png" alt="Spici.spk.bg" width="36"> 
+                            <u><a href="https://spici.spk.bg" target="_blank">spici.spk.bg</a></u>
                         </div>
                         <div class="col fs-6"> <i>Oct 2023 - June 2024</i> </div>
                     </div>
@@ -180,7 +206,10 @@
                 <div class="col-sm-3"></div>
                 <div class="col-sm-3">
                     <div class="row text-end row-cols-1">
-                        <div class="col fs-4"> <u>Cobuilder</u> </div>
+                        <div class="col fs-4"> 
+                            <img src="/images/logos/cobuilder-icon.png" alt="Cobuilder logo" width="36">
+                            <u> <a href="https://cobuilder.com/en/" target="_blank">Cobuilder</a></u> 
+                        </div>
                         <div class="col fs-6"> <i>Nov 2017 - June 2023</i> </div>
                     </div>
                 </div>
@@ -261,7 +290,10 @@
                 <div class="col-sm-3"></div>
                 <div class="col-sm-3">
                     <div class="row text-end row-cols-1">
-                        <div class="col fs-4"> <u>A-Triks</u> </div>
+                        <div class="col fs-4">
+                            <img src="/images/logos/a-triks.jpg" alt="A-Triks" width="36"> 
+                            <u>A-Triks</u> 
+                        </div>
                         <div class="col fs-6"> <i>Nov 2016 - Nov 2017</i> </div>
                     </div>
                 </div>
@@ -312,7 +344,10 @@
                 <div class="col-sm-3"></div>
                 <div class="col-sm-3">
                     <div class="row text-end row-cols-1">
-                        <div class="col fs-4"> <u>First Investment Bank (FiBank)</u> </div>
+                        <div class="col fs-4">
+                            <img src="/images/logos/fibank_sign.png" alt="FiBank" width="36"> 
+                            <u><a href="https://www.fibank.bg/bg" target="_blank">First Investment Bank (FiBank)</a></u>
+                        </div>
                         <div class="col fs-6"> <i>Nov 2012 - Sep 2015</i> </div>
                     </div>
                 </div>
