Update job description, change OSI logo, Closes #3 add fiddler tools.

--- a/me.html
+++ b/me.html
@@ -86,11 +86,12 @@
                 </div>
                 <div class="col-9 row align-items-end">
                     <h2>
-                        <u>
-                            <a href="https://www.linkedin.com/in/mihail-yankov-0a9768a0/" target="_blank"> 
-                                Mihail Yankov <i class="bi bi-linkedin"></i>
-                            </a>
-                        </u>
+                        <a href="https://www.linkedin.com/in/mihail-yankov-0a9768a0/" target="_blank"> 
+                            Mihail Yankov</i></a>
+
+                        <a href="https://www.linkedin.com/in/mihail-yankov-0a9768a0/" target="_blank"> 
+                            <i class="bi bi-linkedin"></i>
+                        </a>
                     </h2>
                 </div>
                 <div class="row wrapper-block">
@@ -119,7 +120,7 @@
                 <div class="col-sm-3">
                     <div class="row text-end row-cols-1">
                         <div class="col fs-4"> 
-                            <img src="/images/logos/OSI.png" class="osi-logo" alt="Object systems international" width="36">
+                            <img src="/images/logos/osi-logo.jpg" alt="Object systems international" width="36">
                             <u><a href="https://www.objectsystems.com/" target="_blank">OSI</a></u>
                         </div>
                         <div class="col fs-6"> <i>Mar 2024   - present</i> </div>
@@ -139,7 +140,21 @@
                                 <div class="accordion-body">
                                     <ul class="list-group list-group-flush">
                                         <li class="list-group-item">
-                                            <i>TO DO:</i>
+                                            <i><a href="https://therapro.ai" target="_blank">TheraPro.AI</a> - is simple voice recording single
+                                            page application helping therapists in their sessions with patients.</i>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <i>Develop application integrated with OpenAI, Use Assistants API, Completions</i>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <i>Angular 17, Stripe, Auth0, ngx-markdown, Gitlab, Azure Pipelines, Libraries,
+                                                .NET CORE 8, SQL SERVER, Azure (App insights, App configurations, Key Vaults, Storage Explorer,
+                                                Azure Batch Transcription REST API)</i>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <i> <a href="https://www.likora.com/" target="_blank">Likora</a> training, Team Efficiency. A 3 day
+                                            training including small games showing how we react in different situation with limited resources where the
+                                            purpose of the game is to work as a team to complete the tasks.</i>
                                         </li>
                                     </ul>
                                 </div>
@@ -232,7 +247,7 @@
                                         <li class="list-group-item">
                                             <i>Web forms, Windows Forms (4.6 .NET framework), ASP .NET web
                                                 sites,
-                                                React JS (Redux), JavaScript, SQL Server, SQL Reports
+                                                React JS (Redux), JavaScript, SQL Server, SQL Reports, Elastic Search
                                             </i>
                                         </li>
                                         <li class="list-group-item">
@@ -409,9 +424,9 @@ PHP;</pre>
 
                         <pre>
 6+ years' experience with C#, .NET, ASP;
-Object Oriented Programing;
+Object Oriented Programming;
 SOLID;
-Teamworking;
+Teamwork;
 Work independently;
 English (Average speak, write);
 Microsoft office;
@@ -473,23 +488,29 @@ Unity 3D;</pre>
 Postman;
 Ditto;
 Telerik Just 
-Decompile;</pre>
-                    </i>
-                </div>
-                <div class="col-3 col-sm-2 animatable opacity-0">
-                    <i>
-                        <pre>
+Decompile;
 ILSpy;
-StyleCop;
-ChostDoc;</pre>
+StyleCop;</pre>
                     </i>
                 </div>
                 <div class="col-3 col-sm-2 animatable opacity-0">
                     <i>
                         <pre>
+ChostDoc;
 Reflexil;
 APEX SQL Search;
-FileZilla;</pre>
+FileZilla;
+ngrok;</pre>
+                    </i>
+                </div>
+                <div class="col-3 col-sm-2 animatable opacity-0">
+                    <i>
+                        <pre>
+<a href="https://dotnetfiddle.net/" target="_blank">.NET fiddle</a>;
+<a href="https://jsfiddle.net/" target="_blank">JS fiddle</a>;
+<a href="https://sqlfiddle.com/" target="_blank">SQL fiddle</a>;
+<a href="https://onlinephp.io/" target="_blank">PHP online compile</a>;
+</pre>
                     </i>
                 </div>
                 <div class="col-12 col-sm-2"></div>
