--- a/me.html
+++ b/me.html
@@ -566,7 +566,7 @@
                 </div>
                 <div class="col-12 col-sm-3"></div>
                 <div class="col-3 text-end">IDEs</div>
-                <div class="col-9 animatable opacity-0 skils">
+                <div class="col-9 animatable opacity-0 skills">
                     <div><span data-bs-toggle="tooltip" data-bs-placement="top" skill="8" data-bs-html="true" data-bs-custom-class="tooltip-primary"><i>Visual Studio;</i></span></div>
                     <div><span data-bs-toggle="tooltip" data-bs-placement="top" skill="9" data-bs-html="true" data-bs-custom-class="tooltip-primary"><i>Visual Studio Code;</i></span></div>
                     <div><span data-bs-toggle="tooltip" data-bs-placement="top" skill="7" data-bs-html="true" data-bs-custom-class="tooltip-primary"><i>SQL Management Studio;</i></span></div>
